// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`runner should allow multiple middleware to be composed 1`] = `
<div>
  <span>
    base-middleware1-middleware2
  </span>
  <a
    href="/foo"
  >
    clickme
  </a>
</div>
`;

exports[`runner should be able to send additional actions as promises 1`] = `
<div>
  <span>
    model
  </span>
  <span>
    0
  </span>
  <a
    href="/foo"
  >
    clickme
  </a>
</div>
`;

exports[`runner should be able to send additional actions as promises 2`] = `
<div>
  <span>
    bar
  </span>
  <span>
    1
  </span>
  <a
    href="/foo"
  >
    clickme
  </a>
</div>
`;

exports[`runner should be able to send additional actions from an action 1`] = `
<div>
  <span>
    model
  </span>
  <span>
    0
  </span>
  <a
    href="/foo"
  >
    clickme
  </a>
</div>
`;

exports[`runner should be able to send additional actions from an action 2`] = `
<div>
  <span>
    bar
  </span>
  <span>
    1
  </span>
  <a
    href="/foo"
  >
    clickme
  </a>
</div>
`;

exports[`runner should be able to use actions to modify the model 1`] = `
<div>
  <span>
    model
  </span>
  <a
    href="/foo"
  >
    clickme
  </a>
</div>
`;

exports[`runner should be able to use actions to modify the model 2`] = `
<div>
  <span>
    action
  </span>
  <a
    href="/foo"
  >
    clickme
  </a>
</div>
`;

exports[`runner should be able to use additional arguments in actions 1`] = `
<div>
  <span>
    model
  </span>
  <a
    href="/foo"
  >
    clickme
  </a>
</div>
`;

exports[`runner should be able to use additional arguments in actions 2`] = `
<div>
  <span>
    bar
  </span>
  <a
    href="/foo"
  >
    clickme
  </a>
</div>
`;

exports[`runner should pass the model to the view as props 1`] = `
<div>
  Hello, model
</div>
`;

exports[`runner should render the initial view 1`] = `
<div>
  Hello, root
</div>
`;

exports[`runner should take middleware functions that modify update behavior 1`] = `
<div>
  <span>
    middleware
  </span>
  <a
    href="/foo"
  >
    clickme
  </a>
</div>
`;
